<resources>
    <string name="app_name">Zalck</string>
    <string name="font_bold_averta" translatable="false">fonts/hinted-Averta-Bold.ttf</string>
    <string name="app_subtitle">Let\'s Organize Your Work</string>
    <string name="enter_email">Enter your email…</string>
    <string name="enter_password">Enter your password…</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="loading_generic_message">loading…</string>
    <string name="connected">Connected</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="signup">SignUp</string>
    <string name="dont_have_an_account_signup">Don\'t Have an Account? SignUp</string>
    <string name="already_have_an_account_signin">Already Have an Account? SignIn</string>
    <string name="forgot_password_click_hear_to_reset">Forgot Password? Click hear to reset</string>
    <string name="signin">SignIn</string>
    <string name="not_connected">Not connected</string>
    <string name="no_internet_connection_error">Oh no! No Internet connection. Make sure that Wi-Fi or cellular mobile data is turned on then try again.</string>

    // Errors
    <string name="empty_field">Field should not be empty</string>

    // Api key
    <string name="api_key">289060a43d2be28c3d49f17ae094abe5</string>
    <string name="title_image">title_image</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="please_select_your_gender_to_continue">Please select your gender to continue</string>
    <string name="sign_up">Sign Up</string>
    <string name="accept_terms_and_conditions">Accept Terms and Conditions</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_profile">Update Profile</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="my_profile">My Profile</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="project_name_tasks">Project Name Tasks</string>
    <string name="user_name">User Name</string>
    <string name="my_projects">My Projects</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="project_name">Project Name</string>
    <string name="project_link">Project Link</string>
    <string name="cancel">Cancel</string>
    <string name="edit_project_details">Edit Project Details</string>
    <string name="add_your_project_details">Add Your Project Details</string>
    <string name="add_project">Add Project</string>
    <string name="clear">Clear</string>
    <string name="edit_project">Edit Project</string>
    <string name="no_projects_available">No Projects Available</string>
    <string name="no_tickets_available">No Tickets Available</string>
    <string name="todo">To Do</string>
    <string name="in_progress">IN PROGRESS</string>
    <string name="done">DONE</string>
    <string name="create_new_ticket">Create New Ticket</string>
    <string name="delete">Delete</string>
    <string name="ticket_name">Ticket Name</string>
    <string name="ticket_description">Ticket Description</string>
    <string name="update">Update</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="add_your_ticket_details">Add Your Ticket Details</string>
    <string name="projects">Projects</string>
    <string name="tasks">Tasks</string>
    <string name="profile">Profile</string>
    <string name="create_a_task_n_succeed_a_project">Create a Task,\n  Succeed a Project</string>
    <string name="field_should_not_be_empty">Field should not be empty.</string>
    <string name="enter_valid_email">Please enter valid email.</string>
    <string name="enter_valid_name">Please enter valid name.</string>
    <string name="enter_valid_last_name">Please enter valid last name.</string>
    <string name="mobile_name_have_numbers">Please enter digits only.</string>
    <string name="password_should_have_one_numeric_character">Password must contain at least 1 numeric character.</string>
    <string name="password_should_have_one_special_character">Password must contain at least one special character.</string>
    <string name="password_must_have_more_than_eight_character">Password must be eight characters or longer.</string>
    <string name="number_must_have_10_digits">Number should have 10 digits.</string>
    <string name="add_first_project_title">Add your first Project   and manage your task</string>
    <string name="add_task">Add Task</string>
    <string-array name="ticket_status">
        <item>TODO</item>
        <item>IN PROGRESS</item>
        <item>DONE</item>
    </string-array>
</resources>

