<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/button_text_size">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/large_button_height"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>


        <com.zalack.android.ui.common.FontEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:layout_marginBottom="5dp"
            android:inputType="textPersonName"
            android:layout_marginTop="30dp"/>

        <com.zalack.android.ui.common.FontEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress" />

        <com.zalack.android.ui.common.FontEditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:inputType="number"
            android:layout_marginBottom="5dp"
            android:maxLength="10"
            android:layout_height="wrap_content"
            android:hint="@string/mobile" />

        <com.zalack.android.ui.common.FontEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <com.zalack.android.ui.common.FontEditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatCheckBox

            android:id="@+id/accept_termas_and_condition"
            android:layout_width="@dimen/large_button_height"
            android:layout_height="@dimen/large_button_height"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:text="@string/accept_terms_and_conditions"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_button_height"
            android:layout_marginTop="@dimen/button_text_size"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:background="@color/black"/>

        <TextView
            android:textColor="@color/black"
            android:id="@+id/already_have_an_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/already_have_an_account_signin"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/button_text_size"
            android:gravity="center_horizontal"/>

    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>