<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.CreateTicketFragment">

    <RelativeLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/large_button_height"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_navigation"
            android:layout_width="@dimen/large_button_height"
            android:layout_height="match_parent"
            android:src="@drawable/left_black"
            android:padding="@dimen/elevation_4"/>

        <com.zalack.android.ui.common.FontTextView
            android:id="@+id/header_title"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_button_height"
            android:gravity="center"
            android:text="@string/create_new_ticket"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintTop_toTopOf="parent"/>

    </RelativeLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/button_text_size"
        android:layout_marginRight="@dimen/button_text_size"
        android:layout_marginTop="@dimen/large_button_height"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <com.zalack.android.ui.common.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/add_your_ticket_details"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <com.zalack.android.ui.common.FontEditText
            android:id="@+id/ticket_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_size"
            android:layout_marginLeft="@dimen/elevation_4"
            android:layout_marginRight="@dimen/elevation_4"
            android:layout_marginBottom="15dp"
            android:paddingStart="10dp"
            android:background="@drawable/edit_text_background"
            android:autofillHints="@string/ticket_name"
            android:hint="@string/ticket_name" />

        <com.zalack.android.ui.common.FontEditText
            android:id="@+id/ticket_description"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_size"
            android:layout_marginLeft="@dimen/elevation_4"
            android:paddingStart="10dp"
            android:background="@drawable/edit_text_background"
            android:autofillHints="@string/ticket_description"
            android:hint="@string/ticket_description" />

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/ticket_status"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_size"
            app:ms_background_selector="@drawable/edit_text_background"
            android:layout_marginLeft="@dimen/elevation_4"
            android:layout_marginBottom="@dimen/button_text_size"
            android:layout_marginTop="@dimen/button_text_size"/>

        <LinearLayout
            android:layout_marginTop="@dimen/edit_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:text="@string/clear"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/elevation_4"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/button_text_size" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/elevation_4"
                android:layout_weight="1"
                android:background="@color/black"
                android:textStyle="bold"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_size" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>