<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayLight"
    tools:context=".ui.fragment.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.zalack.android.ui.common.FontTextView
            android:id="@+id/header_title"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_button_height"
            android:gravity="center"
            android:text="@string/my_profile"
            android:textSize="@dimen/button_text_size"
            android:background="@color/white"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <LinearLayout
            android:id="@+id/profile_info_layout"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@color/grayLight">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="15dp"
                android:padding="@dimen/elevation_4"
                android:background="@drawable/white_circle"
                android:src="@drawable/person_placeholder" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="3">

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/user_name"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/email"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/user_mobile_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="top"
                    android:textColor="@color/black"
                    android:text="@string/mobile_number" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <LinearLayout
            android:id="@+id/update_profile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_button_height"
            android:background="@color/white"
            android:layout_below="@+id/profile_info_layout">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:src="@color/black"/>

            <com.zalack.android.ui.common.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/update_profile" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <LinearLayout
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_button_height"
            android:background="@color/white"
            android:layout_below="@+id/update_profile">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:src="@color/black"/>

            <com.zalack.android.ui.common.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/change_password" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <LinearLayout
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_button_height"
            android:background="@color/white"
            android:layout_below="@+id/change_password">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:src="@color/black"/>

            <com.zalack.android.ui.common.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/logout" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />
    </LinearLayout>

</RelativeLayout>