<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.OnboardingActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="@dimen/large_button_height"
        android:padding="@dimen/button_text_size"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/title_image" />

    <com.zalack.android.ui.common.FontEditText
        android:id="@+id/username"
        android:layout_margin="@dimen/large_button_height"
        android:layout_width="match_parent"
        android:layout_height="@dimen/large_button_height"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <com.zalack.android.ui.common.FontEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/large_button_height"
        android:layout_marginRight="@dimen/large_button_height"
        android:layout_marginLeft="@dimen/large_button_height"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <com.zalack.android.ui.common.FontTextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/large_button_height"
        android:text="Submit"
        android:paddingLeft="@dimen/large_button_height"
        android:paddingRight="@dimen/large_button_height"
        android:paddingTop="@dimen/elevation_4"
        android:paddingBottom="@dimen/elevation_4"
        android:layout_margin="@dimen/large_button_height"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/app_default_color_round_rectangle_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <com.zalack.android.ui.common.FontTextView
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/large_button_height"
        android:background="@drawable/app_default_color_round_rectangle_30"
        android:text="Get Started"
        android:textSize="@dimen/button_text_size"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginBottom="@dimen/large_button_height"
        android:paddingRight="@dimen/button_text_size"
        android:paddingLeft="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>